# MeriNetWorth

./: .envrc  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  flake.nix  process_all.py  pyproject.toml  requirements.txt  run_dashboard.sh
.claude/: settings.json
.streamlit/: config.toml
docs/: DEPLOYMENT.md  EQUITY_GUIDE.md  HUGGINGFACE_QUICKSTART.md  NSDL_PARSER_IMPROVEMENTS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README_HF.md  UV_USAGE.md
flake/: devshells.nix  formatters.nix
scripts/debug/: diagnose_nsdl.py  inspect_all_nsdl.py  inspect_nsdl.py  quick_check_nsdl.py
src/: __init__.py  bank_parsers.py  config.py  equity_parsers.py  mf_parsers.py  process_banks.py  process_equity.py  process_mf.py  upstox_api.py
tests/: test_equity.py  test_parsers.py
web/: app.py
